# AEGIS

./: .gitattributes  .gitignore  ADAPTERS.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: aegis.yml  publish.yml
aegis/: __init__.py  accountability.py  attest.py  audit.py  cli.py  config.py  context.py  distribution.py  engine.py  events.py  failures.py  gate.py  gitsurface.py  identity.py  loader.py  mcp.py  normalize.py  patterns.py  plugins.py  policy.py  reaper.py  review.py  rules.py  skills.py
aegis/adapters/: __init__.py  claude_code.py  generic.py
aegis/grounding/: __init__.py  audit_bridge.py  errors.py  extract.py  gate.py  instrument.py  ledger.py  llm.py  models.py  trace.py  verify.py
aegis/grounding/adapters/: __init__.py  anthropic_trace.py  langchain.py  openai_trace.py
aegis/lifecycle/: __init__.py  _common.py  integrity.py  interaction.py  session.py  team.py  worktree.py
examples/: mcp_server.py
policies/: example.yaml
sandbox/: Dockerfile  README.md  devcontainer.json  entrypoint.sh  run.ps1  run.sh
tests/: live_qa.py  test_accountability.py  test_accountability_flags.py  test_adapters.py  test_attest.py  test_attribution.py  test_audit.py  test_blame.py  test_branch_strands.py  test_builtins.py  test_bulk_install.py  test_claude_code_adapter.py  test_confine.py  test_context.py  test_egress.py  test_engine.py  test_evasion.py  test_evasion_regressions.py  test_failures.py  test_gate.py  test_gitsurface.py  test_grounding_adapters.py  test_grounding_bridge.py  test_grounding_features.py  test_grounding_gate.py  test_grounding_regressions.py  test_identity.py  test_install.py  test_install_git.py  test_install_review.py  test_lifecycle_integrity.py  test_lifecycle_interaction.py  test_lifecycle_session.py  test_lifecycle_team.py  test_lifecycle_worktree.py  test_loader.py  test_mcp.py  test_mcp_config_protect.py  test_metadata_ssrf.py  test_migration.py  (+9 more)
