[project]
name = "aegis-hooks"
version = "0.1.0"
description = "Hooks-based enforcement + accountability for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aegis", "aegis.adapters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
