[project]
name = "aegis-hooks"
version = "0.1.3"
description = "Hooks-based enforcement + accountability for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Adrian Melendez" }]
keywords = ["ai", "agents", "security", "hooks", "policy", "enforcement", "guardrails", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/Thepizzapie/AEGIS"
Repository = "https://github.com/Thepizzapie/AEGIS"
Issues = "https://github.com/Thepizzapie/AEGIS/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aegis", "aegis.adapters", "aegis.lifecycle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
